# supply-chain-security

./: .coverage  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact.bundle  artifact.md  bandit-initial-no-errors.txt  cyclonedx-sbom.json  main.py  merkle_proof.py  mypy.initial.txt  pylint.final.txt  pylint.initial.txt  pyproject.toml  ruff.initial.txt  secrets.txt  secrets_test.txt  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
rekor_monitor/: main.py  merkle_proof.py  util.py
tests/: test_checkpoint.py  test_decoding.py  test_empty_checkpoint.py  test_get_entry.py  test_inclusion.py  test_inclusion_proof_types.py  test_input_format.py  test_invalid_signature.py  test_public_key.py  test_verify_consistency.py  test_verify_signature.py
