[tool.poetry]
name = "rekor monitor"
version = "2.5.0"
description = "An auditing system for Sigstore signatures"
authors = ["Nate Lavoy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
cryptography = "^43.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.1"
pylint = "^3.3.1"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 118

[tool.pylint]
max-line-length = 118


