[tool.poetry]
name = "rekor-monitor"
version = "4.0.1"
description = "An auditing system for Sigstore signatures"
authors = ["Nate Lavoy <nl2587@nyu.edu>"]
readme = "README.md"

[tool.poetry.scripts]
rekor-monitor = "rekor_monitor.main:main"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
cryptography = "^43.0.3"
jsonschema = "^4.23.0"
pre-commit = "^4.0.1"
cyclonedx-bom = "^5.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.1"
pylint = "^3.3.1"
bandit = "^1.7.10"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 118

[tool.pylint]
max-line-length = 118

[tool.pytest.ini_options]
addopts = "--maxfail=1 -v"  # Stop on the first failure and increase verbosity
testpaths = ["tests"]       # Directory where tests are located

